<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2012-2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced settings</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Screen Preference -->
    <string name="category_screen_title">Screen</string>
    <string name="screen_colors_title">Colors</string>

    <!-- Content adaptive backlight control -->
    <string name="cabc_title_head">CABC</string>
    <string name="cabc_summary_head">Enable content adaptive backlight control</string>

    <!-- mDNIe -->
    <string name="mdnie_scenario_title_head">Scenario</string>
    <string name="mdnie_scenario_summary_head">Set the mDNIe Scenario</string>
    <string name="mdnie_mode_title_head">Mode</string>
    <string name="mdnie_mode_summary_head">Set the mDNIe Mode</string>
    <string name="mdnie_negative_title_head">Negative Mode</string>
    <string name="mdnie_negative_summary_head">Enable/Disable inverted colors</string>

    <!-- LED -->
    <string name="led_subcat_title">Notification LED</string>
    <string name="led_fade_title_head">LED Fading</string>
    <string name="led_fade_summary_head">Enable LED smooth fading instead of sharp blinking.</string>

    <!-- Touchkey tuning -->
    <string name="touchkey_subcat_title">Touchkeys</string>
    <string name="touchkey_light_title_head">Backlight</string>
    <string name="touchkey_light_summary_off">Enable backlight</string>
    <string name="touchkey_light_summary_on">Disable backlight</string>
    <string name="touchkey_timeout_title_head">Backlight timeout</string>
    <string name="touchkey_timeout_summary_head">Set timeout for the backlight</string>

    <!-- Haptic Preference -->
    <string name="category_haptic_title">Haptic</string>

    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>

    <!-- Radio Preference -->
    <string name="category_radio_title">Radio</string>
    <string name="hspa_title_head">HSPA</string>
    <string name="hspa_summary_head">Enable HSDPA/HSUPA</string>

    <!-- Audio Preference -->
    <string name="category_audio_title">Audio</string>
    <string name="dockaudio_subcat_title">Dock audio</string>
    <string name="use_dock_audio_title_head">Use USB Dock Audio</string>
    <string name="use_dock_audio_summary_head">Use the passive audio out on the dock</string>
    <string name="incallaudio_subcat_title">In-call audio volumes</string>
    <string name="incall_earpiece_audio_title_head">Earpiece</string>
    <string name="incall_headphone_audio_title_head">Headphone</string>
    <string name="incall_speaker_audio_title_head">Speaker</string>
    <string name="incall_bt_audio_title_head">BT</string>
    <string name="incall_warning">Values higher than %1$d are not recommended</string>
    <string name="audioout_subcat_title">Streaming audio volumes</string>
    <string name="audioout_headphone_audio_title_head">Headphone</string>
    <string name="audioout_speaker_audio_title_head">Speaker</string>
    <string name="audioout_warning">Values higher than %1$d are not recommended</string>

    <!-- S-Pen -->
    <string name="spen_subcat_title">S-Pen</string>
    <string name="spen_power_save_title_head">Power saving mode</string>
    <string name="spen_power_save_summary_head">Disable stylus digitizer when S-Pen is in device</string>
    
    <!-- Lenovo -->
    <string name="category_lenovo_title">K860(i)</string>
    <string name="category_google_title">Google</string>
    <string name="category_sdcard_title">Sdcard</string>
    <string name="category_mac_title">MAC</string>
    <string name="gapps_title_head">Gapps</string>
    <string name="gapps_summary_head">Install/Remove Google Mobile service</string>
    <string name="gapps_do_nothing">Profile no change</string>
    <string name="gapps_install_success">Gapps install success</string>
    <string name="gapps_remove_success">Gapps remove success</string>
    <string name="fstab_title_head">SD Card</string>
    <string name="fstab_summary_head">Exchange internal/external sdcard</string>
    <string name="fstab_do_nothing">Profile no change</string>
    <string name="fstab_internal_success">change to internal success</string>
    <string name="fstab_external_success">change to external success</string>
    <string name="toast_reboot_tip">maybe you need to reboot to take it effect</string>
    <string name="mac_edit_title">Change Mac Address</string>
    <string name="mac_edit_dialog_title">Input A Mac Address:</string>
    <string name="mac_edit_summary">Input a mac address what you want</string>
    <string name="mac_lock_title">Lock Mac Address</string>
    <string name="mac_lock_summary1">Mac address is locked</string>
    <string name="mac_lock_summary2">Mac address is not locked</string>
    <string name="toast_mac_change_tip">After change mac address, please lock it to take effect</string>

</resources>
