<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Lenovo modes -->
    <com.cyanogenmod.settings.device.Gapps
                android:key="gapps"
                android:title="@string/gapps_title_head"
                android:summary="@string/gapps_summary_head"
                android:entries="@array/gapps_entries"
                        android:entryValues="@array/gapps_entries_values"
                        android:defaultValue="21" />
    <com.cyanogenmod.settings.device.Sdcard
                android:key="fstab"
                android:title="@string/fstab_title_head"
                android:summary="@string/fstab_summary_head"
                android:entries="@array/fstab_entries"
                        android:entryValues="@array/fstab_entries_values"
                        android:defaultValue="24" />

</PreferenceScreen>
